# inline_expansion

./: .gitignore  Cargo.toml  main.c
c_project/H5_Report/: Makefile  STM32H533xx_FLASH.ld  STM32H533xx_RAM.ld  compile_commands.json  fc_graph
c_project/H5_Report/Core/Inc/: main.h  print_config.h
c_project/H5_Report/Core/Src/: main.c  print_config.c  stm32h5xx_hal_msp.c
c_project/H5_Report/CoreMark/Inc/: core_portme.h  coremark.h
c_project/H5_Report/CoreMark/Src/: core_main.c  core_portme.c  ee_printf.c
call_graph_output/: call_graph.dot
src/: ast.rs  call_graph.rs  cli.rs  main.rs  parser.rs  utils.rs
src/ast/: core.rs  functions.rs
src/parser/: ast.rs  function_db.rs
