[package]
name = "expansion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clang = { version = "2.0.0", features = ["clang_10_0", "clang_3_6"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.148"
